Fix the vetical alignment bug of .image-preview-wap in Safari.

--- a/application/static/css/macros/_utils.less
+++ b/application/static/css/macros/_utils.less
@@ -54,6 +54,8 @@
     overflow: hidden;
     border-radius: 50%;
     margin-left: 15px;
+    vertical-align: text-bottom;
+    margin-bottom: 2px;
 
     .image-preview {
     }
